--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-DHBW Fallstudie Systemanalyse Änderungen von mir
+DHBW Fallstudie Systemanalyse Änderung Julia Sarah
+Hallo
+
+DHBW Fallstudie Systemanalyse Änderung1
 Sample Project
 
 Version 0.1
