--- a/README
+++ b/README
@@ -1,7 +1,6 @@
-DHBW Fallstudie Systemanalyse Änderung Julia Sarah
-Hallo
+DHBW Fallstudie Systemanalyse
 
-DHBW Fallstudie Systemanalyse Änderung1
+DHBW Fallstudie Systemanalyse
 Sample Project
 
 Version 0.1
