--- a/meetme-app/src/main/res/values/strings.xml
+++ b/meetme-app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Android Maven</string>
+    <string name="breitengrad">Breitengrad</string>
+    <string name="laengengrad">Längengrad</string>
+    <string name="speichernDialogTitel">Speichern</string>
+    <string name="keinGPS">Kein GPS Empfänger. Bitte aktiveren!</string>
+    <string name="hoehe">Höhe</string>
+    <string name="start">Start</string>
+    <string name="stopp">Stopp</string>
+    <string name="speichern">Speichern</string>
+    <string name="ok">Ok</string>
 </resources>
