--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-DHBW Fallstudie Systemanalyse Änderung 2
-Sample Project
+DEB - Deitsche Entwicklerbude
+Virtual Reception - Appointment
 
 Version 0.1
-hem
+
